storage/innobase/include/fts0fts.h
@@ -983,4 +983,10 @@ fts_trx_t*
 fts_trx_create(
 	trx_t*  trx);
 
+/** Clear all fts resources when there is no internal DOC_ID
+and there are no new fts index to add.
+@param[in,out]  table   table  where fts is to be freed
+@param[in]      trx     transaction to drop all fts tables */
+void fts_clear_all(dict_table_t *table, trx_t *trx);
+
 #endif /*!< fts0fts.h */
